adicionando conexão com banco de dados mysql

--- a/.env
+++ b/.env
@@ -1,1 +1,14 @@
+---------------SERVER--------------
 PORT=3333
+
+
+
+---------------DB--------------
+DB_HOST=127.0.0.1
+DB_PASS=12345
+DB_USER=root
+
+
+---------------JWT--------------
+JWT_SECRET=teste1234
+JWT_EXPIRE=7d
