reorganizando algumas pastas e identações

--- a/.env
+++ b/.env
@@ -3,13 +3,21 @@ PORT=3333
 
 
 
----------------DB--------------
+---------------DATABASE--------------
 DB_NAME=knex_test
+
 DB_HOST=127.0.0.1
+
 DB_PASS=12345
+
 DB_USER=root
 
 
 ---------------JWT--------------
 JWT_SECRET=teste1234
 JWT_EXPIRE=7d
+
+
+---------------MAILGUN--------------
+DOMAIN_NAME=
+MAILGUN_API_KEY=
