--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "jsonwebtoken": "^8.5.1",
     "knex": "^0.21.17",
     "method-override": "^3.0.0",
+    "multer": "^1.4.2",
     "mysql2": "^2.2.5"
   },
   "devDependencies": {
