--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "knex": "^0.21.17",
     "method-override": "^3.0.0",
     "multer": "^1.4.2",
-    "mysql2": "^2.2.5"
+    "mysql2": "^2.2.5",
+    "slugify": "^1.4.7"
   },
   "devDependencies": {
     "nodemon": "^2.0.7",
